# NavalForge

./: .gitignore  NAVALFORGE_LEVELS_2_TO_10_HANDOFF.md  README.md  pyproject.toml
docs/: README.md  concept.md  index.html  levels_2_to_10.md  navalforge_3d.html  navalforge_3d_canvas.html  navalforge_visual_online.html  roadmap.md  robots.txt  sitemap.xml  technical_core_v1.md  technical_core_v2.md  technical_core_v3_to_v7.md  technical_limits.md  validation_database_v1.md
examples/: EXEMPLO_EXECUCAO.md  batch_from_json.py  generate_dashboard.py  run_design_loop.py  run_evaluation_scenarios.py  run_savitsky_demo.py  run_single_case.py  run_speed_sweep.py  run_variants.py  sectional_csv_demo.py  speed_power_curve_demo.py  technical_core_demo.py  technical_v3_to_v7_demo.py  validation_database_demo.py
navalforge/: __init__.py
reports/: github_report.md  navalforge_dashboard.html
scripts/: run_all.sh  run_all_windows.bat
tests/: test_basic.py  test_dashboard.py  test_design_loop.py  test_evaluation.py  test_evaluation_scenarios.py  test_savitsky.py  (+5 more)
tools/navalforge_similar_vessels_r0/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
tools/navalforge_similar_vessels_r0/data/: README.md  navalforge_embarcacoes_semelhantes_r0_manifest.json
tools/navalforge_similar_vessels_r0/examples/: projeto_alvo_dgs_frb_85m.json  run_benchmark.py
tools/navalforge_similar_vessels_r0/navalforge_benchmark/: __init__.py  benchmark.py  cli.py  models.py  regression.py  similarity.py  xlsx_reader.py
tools/navalforge_similar_vessels_r0/scripts/: export_xlsx_to_csv.py
(+66 files in other folders)
