[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navalforge"
version = "0.10.1"
description = "Preliminary naval architecture decision-support toolkit"
authors = [{ name = "Eloy Carvalho" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "matplotlib>=3.7", "openpyxl>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
navalforge = "navalforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
